--- a/pipeline.yml
+++ b/pipeline.yml
@@ -34,14 +34,14 @@ jobs:
     image: maven-resource-image-rc
     config:
       platform: linux
-      params:
-        MVN_REPO_URL: {{repo-url}}
-        MVN_SNAPSHOT_URL: {{repo-snapshot-url}}
-        MVN_USERNAME: ((mvn.username))
-        MVN_PASSWORD: ((mvn.password))
-        MVN_SKIP_CERT_CHECK: {{repo-skip-cert-check}}
-        MVN_REPO_CERT: {{repo-cert}}
-        MVN_DISABLE_REDEPLOY: {{repo-disable-redeploy}}
+      #params:
+      #  MVN_REPO_URL: {{repo-url}}
+      #  MVN_SNAPSHOT_URL: {{repo-snapshot-url}}
+      #  MVN_USERNAME: ((mvn.username))
+      #  MVN_PASSWORD: ((mvn.password))
+      #  MVN_SKIP_CERT_CHECK: {{repo-skip-cert-check}}
+      #  MVN_REPO_CERT: {{repo-cert}}
+      #  MVN_DISABLE_REDEPLOY: {{repo-disable-redeploy}}
       run:
         path: sh
         args:
@@ -130,15 +130,15 @@ resources:
     - pipeline.yml
     - README.md
 
-- name: version
-  type: semver
-  source:
-    driver: git
-    initial_version: 1.0.0-rc.0
-    uri: {{git-uri-semver}}
-    branch: version
-    file: version
-    private_key: ((git_key.private_key))
+#- name: version
+#  type: semver
+#  source:
+#    driver: git
+#    initial_version: 1.0.0-rc.0
+#    uri: {{git-uri-semver}}
+#    branch: version
+#    file: version
+#    private_key: ((git_key.private_key))
 
 - name: maven-resource-image-rc
   type: docker-image
@@ -154,15 +154,15 @@ resources:
     username: ((docker.username))
     password: ((docker.password))
 
-- name: pipeline-tasks
-  type: git
-  source:
-    uri: {{pipeline-tasks-git-uri}}
-    branch: {{pipeline-tasks-git-branch}}
+#- name: pipeline-tasks
+#  type: git
+#  source:
+#    uri: {{pipeline-tasks-git-uri}}
+#    branch: {{pipeline-tasks-git-branch}}
 
-- name: github-release
-  type: github-release
-  source:
-    owner: {{github-release-user}}
-    repository: maven-resource
-    access_token: ((github_access_token))
+#- name: github-release
+#  type: github-release
+#  source:
+#    owner: {{github-release-user}}
+#    repository: maven-resource
+#    access_token: ((github_access_token))
