--- a/cred.yml
+++ b/cred.yml
@@ -7,3 +7,4 @@ registry-username: abhisheknishant
 registry-password: abhishek138
 pipeline-tasks-git-uri: https://github.com/manishgit138/pipeline-tasks
 pipeline-tasks-git-branch: master
+github-release-user: manishgit138
