--- a/pipeline.yml
+++ b/pipeline.yml
@@ -14,6 +14,7 @@ jobs:
   - put: maven-resource-image-rc
     params:
       build: maven-resource
+      buildx_platforms: "linux/amd64,linux/arm64"
       tag: version/version
       tag_as_latest: false
 
